--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==3.0.1
-numpy==1.26.3
-pandas==2.2.0
-pyarrow==15.0.1
-requests==2.31.0
-scikit-learn==1.4.0
-scikit-surprise==1.1.3
-surprise==0.1
+Flask
+pandas
+pyarrow
+requests
+scikit-learn
+surprise
+aiohttp
+asyncio
